<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="add_first">Add New</string>
    <string name="enter_item">Enter Item</string>
    <string name="qty">Quantity</string>
    <string name="enter_color">Color</string>
    <string name="title_name">Title</string>
    <string name="enter_size">Size</string>
    <string name="title">New Item</string>
    <string name="save">Save</string>
    <string name="drop_table">DROP TABLE IF EXISTS</string>
    <string name="title_display">Title :</string>
    <string name="qty_display">Quantity :</string>
    <string name="color_display">Color :</string>
    <string name="size_display">Size :</string>
    <string name="date">Date :</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
