<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_enter"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/itemTitle"
                android:layout_below="@+id/title_enter"
                android:hint="@string/title_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/itemQty"
                android:layout_below="@+id/itemTitle"
                android:hint="@string/qty"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/itemColor"
                android:layout_below="@+id/itemQty"
                android:hint="@string/enter_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/itemSize"
                android:layout_below="@+id/itemColor"
                android:hint="@string/enter_size"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/save_item"
                android:layout_below="@+id/itemSize"
                android:text="@string/save"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>