<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:text="@string/are_you_sure"
                android:padding="6dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/no_conf"
                android:text="@string/no"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/yes_conf"
                android:text="@string/yes"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>