<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        tools:targetApi="o">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/title_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_display"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_item"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_toEndOf="@+id/title_display"
                android:layout_toRightOf="@+id/title_display"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/qty_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_display"
                android:text="@string/qty_display"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qty_item"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/title_item"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/qty_display"
                android:layout_toRightOf="@+id/qty_display"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/color_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qty_display"
                android:text="@string/color_display"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/color_item"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/qty_item"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_toEndOf="@+id/color_display"
                android:layout_toRightOf="@+id/color_display"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/size_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/color_display"
                android:text="@string/size_display"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/size_item"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/color_item"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/size_display"
                android:layout_toRightOf="@+id/size_display"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size_display"
                android:text="@string/date"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_item"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/size_item"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/date_display"
                android:layout_toRightOf="@+id/date_display"
                android:textSize="19sp" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/date_display"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:drawable/ic_menu_edit"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:drawable/ic_menu_delete"
                    tools:ignore="ButtonStyle" />
            </TableRow>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>